# momentum-candle

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  opencode.json  pyproject.toml  ruff.toml
.claude/: .gitignore  SESSION-NOTES.md  settings.json  settings.md
.claude/agents/: code-reviewer.md  python-mt5-engineer.md
.claude/commands/: account-status.md  execute-signal.md  pr-review.md
.claude/hooks/: branch-guard.sh  live-trade-guard.sh  pytest-on-edit.sh  ruff-format.sh  skill-eval.py  skill-rules.json
.claude/rules/: code-style.md  git-conventions.md  safety-first.md
.claude/skills/: README.md
data/backtests/: april2026-results-baseline-next_open.json  layered-comparison.md  (+40 more)
docs/: architecture.md  deployment.md  mql5-indicators.md
mql5/: README.md
scripts/: analyze_eye_tags.py  analyze_history_csv.py  analyze_may2026_factors.py  backtest_may2026.py  layered_backtest.py  list_fx_symbols.py  list_metals_oil.py  multi_month_backtest.py  oos_validation_april.py  parse_eye_tags.py  phase10_mtf_backtest.py  phase11_dxy_correlation.py  phase12_multisymbol.py  phase13_rr_exploration.py  phase14_m15_backtest.py  phase15_m15_optimize.py  phase3_sr_confluence_backtest.py  phase4_3p_sr_backtest.py  phase5_fade_failed_pattern.py  phase6_ict_amd_backtest.py  phase9_amd_fvg_backtest.py  phase9_compare_v05.py  phase9_diag.py  pull_april2026.py  pull_month.py  pull_symbol_month.py  test_optimized_filter.py
tests/: __init__.py  conftest.py  test_client.py  test_constants.py  test_momentum_candle.py  test_support_resistance.py  test_trade_dry_run.py
(+40 files in other folders)
