[project]
name = "momentum-candle"
version = "0.1.0"
description = "MT5 MCP server + signal automation for the momentum-candle strategy on XAUUSD"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "momentum-candle" }]
license = { text = "MIT" }
dependencies = [
    "MetaTrader5>=5.0.45",
    "fastmcp>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "youtube-transcript-api>=1.2.4",
]

[project.scripts]
mt5-mvp = "mt5_mvp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_mvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: requires a live MT5 terminal (set MT5_INTEGRATION=1)",
]
